[gd_scene load_steps=7 format=3 uid="uid://cvkvtb25je5tc"]

[ext_resource type="Texture2D" uid="uid://c0wtlmh38aj1a" path="res://kovalara_yerlestir/kova.png" id="1_lti8b"]
[ext_resource type="Script" uid="uid://b6avpqngxc0bg" path="res://menu.gd" id="1_ouk20"]
[ext_resource type="PackedScene" uid="uid://5b1erwkd0cri" path="res://kovalara_yerlestir/game_1.tscn" id="2_mae5d"]
[ext_resource type="PackedScene" uid="uid://clwq1cgxmnx0p" path="res://boyama/boyama.tscn" id="3_l48gv"]
[ext_resource type="Texture2D" uid="uid://bk85m4l6llmrf" path="res://tempbaloons.jpg" id="4_4hy44"]
[ext_resource type="Texture2D" uid="uid://b60jt5y8sk03b" path="res://debug_fillable.png" id="5_ytr4m"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouk20")
kova_game = ExtResource("2_mae5d")
boya_game = ExtResource("3_l48gv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 125.0
offset_top = 232.0
offset_right = -125.0
offset_bottom = -232.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 100
columns = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("1_lti8b")
expand_mode = 3

[node name="KovaButton" type="Button" parent="CanvasLayer/Panel/GridContainer/TextureRect"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("4_4hy44")
expand_mode = 3

[node name="BaloonButton" type="Button" parent="CanvasLayer/Panel/GridContainer/TextureRect2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Panel/GridContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("5_ytr4m")
expand_mode = 3

[node name="BoyaButton" type="Button" parent="CanvasLayer/Panel/GridContainer/TextureRect3"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureRect/KovaButton" to="." method="_on_kova_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureRect2/BaloonButton" to="." method="_on_baloon_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/GridContainer/TextureRect3/BoyaButton" to="." method="_on_boya_button_pressed"]
